@@ -1,3 +1,7 @@
+2011-12-02  Stas Boukarev  <stassats@gmail.com>
+
+	* swank-sbcl.lisp (wait-for-input): Use poll only on #+os-provides-poll.
+
 2011-12-02  Helmut Eller  <heller@common-lisp.net>
 
 	* swank.lisp (listener-channel): Moved to contrib/swank-mrepl.lisp
